Added 3 pages and modified HomePage's top side

--- a/Program/TimeAndTune/TimeAndTune/TimeAndTune.csproj
+++ b/Program/TimeAndTune/TimeAndTune/TimeAndTune.csproj
@@ -7,4 +7,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="menu_icon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="menu_icon.png" />
+  </ItemGroup>
+
 </Project>
