--- a/Program/TimeAndTune/TimeAndTune/TimeAndTune.csproj
+++ b/Program/TimeAndTune/TimeAndTune/TimeAndTune.csproj
@@ -9,12 +9,14 @@
 
   <ItemGroup>
     <None Remove="Pages\menu_icon.png" />
+    <None Remove="Pages\play.png" />
     <None Remove="Pages\plus_image.png" />
     <None Remove="Pages\user_image.png" />
   </ItemGroup>
 
   <ItemGroup>
     <Resource Include="Pages\menu_icon.png" />
+    <Resource Include="Pages\play.png" />
     <Resource Include="Pages\plus_image.png" />
     <Resource Include="Pages\user_image.png" />
   </ItemGroup>
