--- a/Program/TimeAndTune/TimeAndTune/TimeAndTune.csproj
+++ b/Program/TimeAndTune/TimeAndTune/TimeAndTune.csproj
@@ -17,6 +17,7 @@
     <None Remove="logout_image.png" />
     <None Remove="Pages\cafe_sound.png" />
     <None Remove="Pages\camp_fire_sound.png" />
+    <None Remove="Pages\hidePassword_image.png" />
     <None Remove="Pages\menu_icon.png" />
     <None Remove="Pages\mute_logo.png" />
     <None Remove="Pages\night_crickets_sound.png" />
@@ -24,6 +25,7 @@
     <None Remove="Pages\playButton.png" />
     <None Remove="Pages\plus_image.png" />
     <None Remove="Pages\rain_sound.png" />
+    <None Remove="Pages\showPassword_image.png" />
     <None Remove="Pages\train_sound.png" />
     <None Remove="Pages\user_image.png" />
     <None Remove="Pages\wind_sound.png" />
@@ -47,6 +49,7 @@
     <Resource Include="logout_image.png" />
     <Resource Include="Pages\cafe_sound.png" />
     <Resource Include="Pages\camp_fire_sound.png" />
+    <Resource Include="Pages\hidePassword_image.png" />
     <Resource Include="Pages\menu_icon.png" />
     <Resource Include="Pages\mute_logo.png" />
     <Resource Include="Pages\night_crickets_sound.png" />
@@ -54,6 +57,7 @@
     <Resource Include="Pages\playButton.png" />
     <Resource Include="Pages\plus_image.png" />
     <Resource Include="Pages\rain_sound.png" />
+    <Resource Include="Pages\showPassword_image.png" />
     <Resource Include="Pages\train_sound.png" />
     <Resource Include="Pages\user_image.png" />
     <Resource Include="Pages\wind_sound.png" />
