--- a/Program/TimeAndTune/TimeAndTune/TimeAndTune.csproj
+++ b/Program/TimeAndTune/TimeAndTune/TimeAndTune.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Pages\CustomTemplates\**" />
+    <EmbeddedResource Remove="Pages\CustomTemplates\**" />
+    <None Remove="Pages\CustomTemplates\**" />
+    <Page Remove="Pages\CustomTemplates\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="back_button.png" />
     <None Remove="coin_image.png" />
     <None Remove="DialogWindows\focus_image.png" />
@@ -46,23 +53,43 @@
     <Resource Include="DialogWindows\statistics_image.png" />
     <Resource Include="logo.png" />
     <Resource Include="logout_image.png" />
-    <Resource Include="Pages\cafe_sound.png" />
-    <Resource Include="Pages\camp_fire_sound.png" />
+    <Resource Include="Pages\FocusPageImages\cafeSound.png" />
+    <Resource Include="Pages\FocusPageImages\campFireSound.png" />
     <Resource Include="Pages\menu_icon.png" />
-    <Resource Include="Pages\mute_logo.png" />
-    <Resource Include="Pages\night_crickets_sound.png" />
-    <Resource Include="Pages\pauseButton.png" />
-    <Resource Include="Pages\playButton.png" />
+    <Resource Include="Pages\FocusPageImages\mute.png" />
+    <Resource Include="Pages\FocusPageImages\nightCricketsSound.png" />
+    <Resource Include="Pages\FocusPageImages\pause.png" />
+    <Resource Include="Pages\FocusPageImages\play.png" />
     <Resource Include="Pages\plus_image.png" />
-    <Resource Include="Pages\rain_sound.png" />
-    <Resource Include="Pages\train_sound.png" />
+    <Resource Include="Pages\FocusPageImages\rainSound.png" />
+    <Resource Include="Pages\FocusPageImages\trainSound.png" />
     <Resource Include="Pages\user_image.png" />
-    <Resource Include="Pages\volume_image.png" />
-    <Resource Include="Pages\wind_sound.png" />
+    <Resource Include="Pages\FocusPageImages\volume.png" />
+    <Resource Include="Pages\FocusPageImages\windSound.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Pages\CustomTemplates\" />
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Pages\FocusPageSounds\rain1.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\rain1.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
