--- a/Program/TimeAndTune/.editorconfig
+++ b/Program/TimeAndTune/.editorconfig
@@ -47,3 +47,18 @@ dotnet_diagnostic.SA1121.severity = none
 
 # CS0168: Variable is declared but never used
 dotnet_diagnostic.CS0168.severity = none
+
+# SA1200: Using directives should be placed correctly
+dotnet_diagnostic.SA1200.severity = none
+
+# SA1208: System using directives should be placed before other using directives
+dotnet_diagnostic.SA1208.severity = none
+
+# CS8766: Nullability of reference types in return type doesn't match implicitly implemented member (possibly because of nullability attributes).
+dotnet_diagnostic.CS8766.severity = none
+
+# CS8629: Nullable value type may be null.
+dotnet_diagnostic.CS8629.severity = none
+
+# CS8603: Possible null reference return.
+dotnet_diagnostic.CS8603.severity = none
